hphp/test/zend/good/tests/classes/abstract_user_call.php.expectf
test::func()

Fatal error: Cannot call abstract method test_base::func() in %s/abstract_user_call.php on line 20
